--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: dio_retry
 description: A starting point for Dart libraries or applications.
 version: 0.1.10-beta
-homepage: https://github.com/aloisdeniel/dio_retry
-author: aloisdeniel <alois.deniel@outlook.com>
+homepage: https://github.com/iampato/dio_retry
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  meta: ^1.3.0
-  logging: ^1.0.1
   dio: ^4.0.0
+  logger: ^1.1.0
+  meta: ^1.7.0
 
 dev_dependencies:
   pedantic: ^1.11.0
